Upgrade dependency versions and jvm version to 11.0.1